--- a/site/guide/model-validation/_track-issue-resolution.qmd
+++ b/site/guide/model-validation/_track-issue-resolution.qmd
@@ -16,7 +16,7 @@ As you prepare your validation report, review open or past due model findings, c
     - **If the finding has been addressed:**
 
         - Add any final comments to assess how the issue was resolved. 
-        - Under **[status]{.smallcaps}**, select `closed`.
+        - Under **[status]{.smallcaps}**, select `Closed`.
 
     - **If part or all of the finding remains to be addressed:**
 
@@ -52,7 +52,7 @@ Low-severity findings (Level 3)
     - **If the finding has been addressed**: 
     
         - Add any final comments to assess how the issue was resolved.
-        - Under **[status]{.smallcaps}**, select `closed`.
+        - Under **[status]{.smallcaps}**, select `Closed`.
 
     - **If part or all of the finding remains to be addressed**: 
     
