--- a/site/index.qmd
+++ b/site/index.qmd
@@ -16,9 +16,9 @@ listing:
     fields: [title, subtitle, date]
     contents:
     # MAKE-RELEASE-NOTES-LATEST-MARKER
-      - /releases/validmind-library-releases.qmd
-      - /releases/validmind-platform-releases.qmd
-      - /releases/documentation-releases.qmd
+      - /releases/2025/2025-jan-31/release-notes.qmd
+      - /releases/2025/2025-mar-07/release-notes.qmd
+      - /releases/2025/2025-apr-24/release-notes.qmd
     # MAKE-RELEASE-NOTES-OLDEST-MARKER
 ---
 
@@ -40,14 +40,12 @@ a {
 a:hover {
   text-decoration: none;
 }
-.quarto-content {
-  background-color: #EDF9FA;
-}
+
 
 #searchbox {
   width: 100%;
   max-width: 100%;
-  min-width: 650px;
+  min-width: auto;
   padding: 10px;
   border: 3px solid #083E44;
   border-radius: 8px;
@@ -203,6 +201,19 @@ main.content {
   min-height: auto !important;
 }
 
+/* Make body width responsive on mobile */
+@media (max-width: 768px) {
+  .quarto-container {
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+  
+  .page-columns {
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+}
+
 .page-rows-contents {
   grid-template-rows: [content-top] minmax(max-content, 1fr) [content-bottom] minmax(0px, max-content) [page-bottom] !important;
 }
@@ -223,6 +234,87 @@ main.content {
    background-attachment: scroll;
    padding: 2rem 0rem;
   }
+
+ /* Add after existing styles */
+@media (max-width: 768px) {
+  /* Search box mobile styles */
+  #searchbox {
+    min-width: auto;
+    font-size: 16px; /* Prevents zoom on iOS */
+  }
+  
+  .search-wrapper {
+    max-width: 100%;
+    padding: 0 15px;
+  }
+  
+  /* Container mobile styles */
+  .center.bg-white {
+    width: 100% !important;
+    margin: 0 !important;
+    border-radius: 0 !important;
+  }
+  
+  .w-33-ns {
+    width: 100% !important;
+    margin-bottom: 2rem;
+  }
+  
+  .w-40-ns {
+    width: 100% !important;
+  }
+  
+  .w-30-ns {
+    display: none; /* Hide filler columns on mobile */
+  }
+  
+  .w-10-ns {
+    display: none; /* Hide small filler columns on mobile */
+  }
+  
+  .flex.flex-wrap.justify-around {
+    flex-direction: column;
+  }
+  
+  .pt5, .pl5, .pr5, .pb4 {
+    padding: 1rem !important;
+  }
+  
+  /* Button mobile styles */
+  .button, .cta {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  
+  /* Text sizing for mobile */
+  .f3 {
+    font-size: 1.5rem !important;
+  }
+  
+  .f4 {
+    font-size: 1rem !important;
+  }
+  
+  .f5 {
+    font-size: 0.9rem !important;
+  }
+  
+  /* Touch-friendly improvements */
+  a, button, .button, .cta {
+    min-height: 44px;
+    min-width: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* Improve spacing for touch targets */
+  .w-33-ns, .w-40-ns {
+    padding: 1rem;
+  }
+}
 
 </style>
 ```
@@ -360,14 +452,12 @@ ValidMind [Academy]{.pink}
 Latest Release
 :::
 
-![](/assets/home-page/release_icon.svg){.release-icon}&ensp;**25.03.05** / April 24, 2025
-  
+![](/assets/home-page/release_icon.svg){.mb3 width="30" style="top: 4px"}&ensp;**25.03.05** / April 24, 2025  
 
 ::: {.pl4 .nt3 .mid-gray}
-We’ve released the ability to manage model stakeholder types within the ValidMind Platform, support for custom configuration of test-driven blocks via the ValidMind Library, an updated Python API reference within our documentation, and more.
+We've released the ability to manage model stakeholder types within the ValidMind Platform, support for custom configuration of test-driven blocks via the ValidMind Library, an updated Python API reference within our documentation, and more.
 :::
 
-[**View all releases**](/releases/all-releases.qmd)
 :::
 
 ::::
