docs: Manage finding statuses (#809)
* Setup for managing validation

* Editing

* Draft

* Proofreading

* Tweak

* Edit

--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -32,8 +32,8 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - model-workflows/working-with-model-workflows.qmd
     - model-workflows/setting-up-model-workflows.qmd
+    - model-workflows/working-with-model-workflows.qmd
   - id: guides-model-inventory
     type: grid
     max-description-length: 250
@@ -72,7 +72,7 @@ listing:
     sort: false
     fields: [title, description]
     contents: 
-    - model-validation/manage-validation-guidelines.qmd
+    - model-validation/managing-model-validation.qmd
     - templates/working-with-templates.qmd
     - templates/manage-text-block-library.qmd
   - id: guides-model-validation
@@ -174,7 +174,7 @@ Finally, refine your model documentation, and collaborate with model validators 
 
 ## Model validation
 
-First, set up validation guidelines, customizable report templates, and reusable blocks:
+First, set up your organization for validation, and customize reusable report templates and blocks:
 
 :::{#guides-validator}
 :::
