--- a/internal/testing/variables/variables.qmd
+++ b/internal/testing/variables/variables.qmd
@@ -26,5 +26,5 @@ search: false
 | `var version.python` | {{< var version.python >}} |
 | `var version.validmind` | {{< var version.validmind >}} |
 | `api.host` | {{< var api.host >}} |
-| `validmind.customer-managed` | {{< var validmind.customer-managed >}} |
+| `validmind.customer` | {{< var validmind.customer >}} |
 | `validmind.admin` | {{< var validmind.admin >}} |
