Broadcast step Edit

--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -151,6 +151,10 @@ Creates a button that performs an action on behalf of the user.
 
 Display a preconfigured message users in the selected **[approval group]{.smallcaps}**.
 
+#### {{< fa bullhorn >}} Broadcast
+
+Send email notifications to users in selected groups.
+
 #### {{< fa maximize >}} Condition Branch
 
 Allows diverging paths based on conditional requirements.
