--- a/site/guide/model-workflows/_conditional-requirements.qmd
+++ b/site/guide/model-workflows/_conditional-requirements.qmd
@@ -35,7 +35,7 @@ Configure conditional requirements for the following step types:^[[Workflow step
 
 #### {{< fa bullhorn >}} Broadcast
 
-Select from either **Model Stakeholder Types**^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **Organization Roles**^[[Manage roles](/guide/configuration/manage-roles.qmd)].
+Select from either **Model Stakeholder Types**^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User Roles**^[[Manage roles](/guide/configuration/manage-roles.qmd)].
 
 ### Conditional
 
