--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -56,7 +56,7 @@ Send email notifications to users in selected groups. Select from either **User 
 
 | Field | Description |
 |---:|---|
-| Select roles  | Select the **Model Stakeholder Types** or **Organization Roles** to receive the email. |
+| Select roles  | Select the **Model Stakeholder Types** or **User Roles** to receive the email. |
 | [subject]{.smallcaps} | Subject of the email. |
 | [message]{.smallcaps} | Body of the email. Use the rich text editor to compose your message.^[Include details about the model the workflow is running on using the **{ } Insert Variable** drop-down.] |
 : **{{< fa bullhorn >}} Broadcast** step configuration {.hover tbl-colwidths="[25,75]"}
