Setup for Broadcast example

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -133,9 +133,30 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assign
 
 ![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" width=90% .screenshot group="approval"}
 
+#### {{< fa bullhorn >}} Broadcast
+
+In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email notification:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+:::
+
+::: {.w-40-ns}
+
+![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+
+:::
+
+::::
+
+![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" width=90% .screenshot group="approval"}
+
 #### {{< fa maximize >}} Condition Branch
 
-In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^15] approval process:[^16]
+In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^16] approval process:[^17]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -154,7 +175,7 @@ In this example, models where the field [genai model]{.smallcaps} is set to true
 
 #### {{< fa clock >}} Wait
 
-In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} date time field:[^17]
+In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} date time field:[^18]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -264,8 +285,10 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^14]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^15]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^15]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^16]: [{{< fa users >}} Approval](#approval)
+[^16]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^17]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+[^17]: [{{< fa users >}} Approval](#approval)
+
+[^18]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
