--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -40,7 +40,7 @@ This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-
 
 This workflow is initiated when a field is populated — in this case, when the model is slated for deployment by entering value into the [deployment scheduled]{.smallcaps} date time field.[^8]
 
-- The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production.
+- The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production. After a model is deployed via this workflow, an email notification is sent to users notifying them of the completed implementation.
 - Actions on this workflow are linked both to a transition in model stage,[^9] as well as workflow state.[^10]
 
 ::: {.tc}
@@ -135,24 +135,24 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assign
 
 #### {{< fa bullhorn >}} Broadcast
 
-In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email notification:
+In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email notification after a model is deployed:
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
 
-![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+![Example {{< fa bullhorn >}} Broadcast configuration modal](configure_broadcast.png){fig-alt="A screenshot showing an example Broadcast configuration modal" .screenshot group="approval"}
 :::
 
 ::: {.w-40-ns}
 
-![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+![Example {{< fa bullhorn >}} Broadcast step](example_broadcast.png){fig-alt="A screenshot showing an example Broadcast step" .screenshot group="approval"}
 
 :::
 
 ::::
 
-![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" width=90% .screenshot group="approval"}
+![Example {{< fa bullhorn >}} Broadcast email notification](example_broadcast-notif.png){fig-alt="A screenshot showing an example Broadcast email notification" width=90% .screenshot group="approval"}
 
 #### {{< fa maximize >}} Condition Branch
 
@@ -270,6 +270,7 @@ In this example, the workflow is designated to stop after running an additional 
     - [{{< fa arrow-pointer >}} User Action v2](#user-action-v2)
     - [{{< fa cube >}} Model Stage Change](#model-stage-change)
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
+    - [{{< fa bullhorn >}} Broadcast](#broadcast)
     - [{{< fa clock >}} Wait](#wait)
     - [{{< fa circle-stop >}} End](#end)
 
