--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -139,20 +139,20 @@ In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email n
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-60-ns}
+::: {.w-50-ns}
 
-![Example {{< fa bullhorn >}} Broadcast configuration modal](configure_broadcast.png){fig-alt="A screenshot showing an example Broadcast configuration modal" .screenshot group="approval"}
+![Example {{< fa bullhorn >}} Broadcast configuration modal](configure_broadcast.png){fig-alt="A screenshot showing an example Broadcast configuration modal" .screenshot group="broadcast"}
 :::
 
 ::: {.w-40-ns}
 
-![Example {{< fa bullhorn >}} Broadcast step](example_broadcast.png){fig-alt="A screenshot showing an example Broadcast step" .screenshot group="approval"}
+![Example {{< fa bullhorn >}} Broadcast step](example_broadcast.png){fig-alt="A screenshot showing an example Broadcast step" .screenshot group="broadcast"}
+
+![Example {{< fa bullhorn >}} Broadcast email notification](example_broadcast-notif.png){fig-alt="A screenshot showing an example Broadcast email notification" .screenshot group="broadcast"}
 
 :::
 
 ::::
-
-![Example {{< fa bullhorn >}} Broadcast email notification](example_broadcast-notif.png){fig-alt="A screenshot showing an example Broadcast email notification" width=90% .screenshot group="approval"}
 
 #### {{< fa maximize >}} Condition Branch
 
