--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -52,13 +52,15 @@ Display a preconfigured message to users in the selected **[approval group]{.sma
 
 #### {{< fa bullhorn >}} Broadcast
 
-Send email notifications to users in selected groups. Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
+Send email notifications to users in selected groups.
+
+Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
 
 | Field | Description |
 |---:|---|
 | Select roles  | Select the **Model Stakeholder Types** or **User Roles** to receive the email. |
-| [subject]{.smallcaps} | Subject of the email. |
-| [message]{.smallcaps} | Body of the email. Use the rich text editor to compose your message.^[Include details about the model the workflow is running on using the **{ } Insert Variable** drop-down.] |
+| [subject]{.smallcaps} | Enter the subject of the email. |
+| [message]{.smallcaps} | Enter the body of the email. Use the rich text editor to compose your message.^[Include details about the model the workflow is running on using the **{ } Insert Variable** drop-down. Click on the **Preview** tab and choose a model under **[select model for preview]{.smallcaps}** to confirm how variables will be displayed in the notification.] |
 : **{{< fa bullhorn >}} Broadcast** step configuration {.hover tbl-colwidths="[25,75]"}
 
 ### Conditional
