--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -148,7 +148,7 @@ In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email n
 
 ![Example {{< fa bullhorn >}} Broadcast step](example_broadcast.png){fig-alt="A screenshot showing an example Broadcast step" .screenshot group="broadcast"}
 
-![Example {{< fa bullhorn >}} Broadcast email notification](example_broadcast-notif.png){fig-alt="A screenshot showing an example Broadcast email notification" .screenshot group="broadcast"}
+![Example {{< fa bullhorn >}} Broadcast notification preview](example_broadcast-notif.png){fig-alt="A screenshot showing an example Broadcast notification preview" .screenshot group="broadcast"}
 
 :::
 
