--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -60,7 +60,7 @@ Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional 
 |---:|---|
 | Select roles  | Select the **Model Stakeholder Types** or **User Roles** to receive the email. |
 | [subject]{.smallcaps} | Enter the subject of the email. |
-| [message]{.smallcaps} | Enter the body of the email. Use the rich text editor to compose your message.^[Include details about the model the workflow is running on using the **{ } Insert Variable** drop-down. Click on the **Preview** tab and choose a model under **[select model for preview]{.smallcaps}** to confirm how variables will be displayed in the notification.] |
+| [message]{.smallcaps} | Enter the body of the email.[^step-types-3] |
 : **{{< fa bullhorn >}} Broadcast** step configuration {.hover tbl-colwidths="[25,75]"}
 
 ### Conditional
@@ -131,6 +131,10 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
         a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.
         b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.
 
+[^step-types-3]: Use the rich text editor to compose your message:
+
+    1. Include optional details about the model the workflow is running on using the **{ } Insert Variable** drop-down.
+    2. Click on the **Preview** tab and choose a model under **[select model for preview]{.smallcaps}** to confirm how the notification will appear when rendered.
 ::::
 
 
