--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -40,7 +40,8 @@ This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-
 
 This workflow is initiated when a field is populated — in this case, when the model is slated for deployment by entering value into the [deployment scheduled]{.smallcaps} date time field.[^8]
 
-- The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production. After a model is deployed via this workflow, an email notification is sent to users notifying them of the completed implementation.
+- The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production.
+- After a model is deployed via this workflow, an email notification is sent to users notifying them of the completed implementation.
 - Actions on this workflow are linked both to a transition in model stage,[^9] as well as workflow state.[^10]
 
 ::: {.tc}
