--- a/site/index.qmd
+++ b/site/index.qmd
@@ -7,19 +7,19 @@ resources:
   - assets/**
 filters:
     - tachyons
-listing:
-  - id: releases
-    type: grid
-    grid-columns: 3
-    max-description-length: 150
-    sort: false
-    fields: [title, subtitle, date]
-    contents:
-    # MAKE-RELEASE-NOTES-LATEST-MARKER
-      - /releases/2025/2025-jan-31/release-notes.qmd
-      - /releases/2025/2025-mar-07/release-notes.qmd
-      - /releases/2025/2025-apr-24/release-notes.qmd
-    # MAKE-RELEASE-NOTES-OLDEST-MARKER
+# listing:
+#   - id: releases
+#     type: grid
+#     grid-columns: 3
+#     max-description-length: 150
+#     sort: false
+#     fields: [title, subtitle, date]
+#     contents:
+#      MAKE-RELEASE-NOTES-LATEST-MARKER
+#       - /releases/2025/2025-jan-31/release-notes.qmd
+#       - /releases/2025/2025-mar-07/release-notes.qmd
+#       - /releases/2025/2025-apr-24/release-notes.qmd
+#      MAKE-RELEASE-NOTES-OLDEST-MARKER
 ---
 
 ```{=html}
