Fix searchbox width

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -45,7 +45,7 @@ a:hover {
 #searchbox {
   width: 100%;
   max-width: 100%;
-  min-width: auto;
+  min-width: 680px;
   padding: 10px;
   border: 3px solid #083E44;
   border-radius: 8px;
