Remove link to file that requires an include to work

--- a/site/training/fake-tour/product-tour.qmd
+++ b/site/training/fake-tour/product-tour.qmd
@@ -174,7 +174,7 @@ You can also embed several sets of instructions into the same two-column layout.
 ::: {.f5 .nt2}
 :::
 
-For example, the following links to our [_collaborate-with-others-comments.qmd](/guide/model-documentation/_collaborate-with-others-comments.qmd){target="_blank"} single-source include file. 
+For example, the following links to our single-source include file for collaborating with others. 
 
 All you need to do is make sure that the headers within `.panel-tabset` are set to `h3` (`###`). 
 
