added the filler column, still need to work on the spacing and button tyle

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -318,11 +318,15 @@ main.content {
 
 </style>
 ```
-
 ::: {.column-screen}
 
 :::: {.flex .flex-wrap .justify-around .hero}
 
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::: {.w-80-ns}
 <!-- Add a search box to home page-->
 <div class="search-wrapper">
   <span class="search-icon">
@@ -345,6 +349,12 @@ main.content {
 <script src="https://unpkg.com/lunr/lunr.js"></script>
 <script src="scripts/validsearch.js"></script>
 
+:::
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
 ::::
 
 <!-- CENTERED WHITE BOX WITH FIXED WIDTH & FULL HEIGHT -->
@@ -353,10 +363,15 @@ main.content {
 <!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
 :::: {.flex .flex-wrap .justify-around .pt5 .pl5 .pr5 .pb4}
 
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::: {.w-80-ns .flex .flex-wrap .justify-around}
+
 ::: {.w-33-ns .pr2}
 ![](/assets/home-page/setup_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
 
-<!-- NR TO DO Global: Font weight of headings doesn't match the design -->
 ::: {.f3 .b .nt3 .nb3}
 Setup + Administration
 :::
@@ -390,12 +405,24 @@ Model Validation
 [**Validator QuickStart**](/get-started/validator/quickstart-validator.qmd){.button-green .cta}
 :::
 
+:::
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
 ::::
 
 <!-- VALIDMIND TOUR -->
 ::: {.tour-bg .tc}
 
 :::: {.flex .flex-wrap .justify-around .pl5 .pr5}
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::: {.w-80-ns .flex .flex-wrap .justify-around}
 
 ::: {.w-30-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
@@ -421,12 +448,24 @@ ValidMind is a platform that helps identify AI and LLM risks while generating re
 <!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
+:::
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
 ::::
 
 :::
 
 <!-- FINAL ROW: Academy and Latest Release TEXT SIDE-BY-SIDE -->
 :::: {.flex .flex-wrap .justify-around .pt4 .pl5 .pr5 .pb5}
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::: {.w-80-ns .flex .flex-wrap .justify-around}
 
 ::: {.w-40-ns}
 
@@ -458,6 +497,12 @@ Latest Release
 We've released the ability to manage model stakeholder types within the ValidMind Platform, support for custom configuration of test-driven blocks via the ValidMind Library, an updated Python API reference within our documentation, and more.
 :::
 
+:::
+
+:::
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
 ::::
