chnaged the button style

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -20,6 +20,9 @@ filters:
 #       - /releases/2025/2025-mar-07/release-notes.qmd
 #       - /releases/2025/2025-apr-24/release-notes.qmd
 #      MAKE-RELEASE-NOTES-OLDEST-MARKER
+format:
+  html:
+    css: styles.css
 ---
 
 ```{=html}
@@ -378,7 +381,7 @@ Setup + Administration
 
 [Invite users and control access to ValidMind by managing user roles, groups, and permissions.]{.mid-gray .f4}
 
-[**Setup QuickStart**](/get-started/administrator/quickstart-administrator.qmd){.button-green .cta}
+[**Setup QuickStart**](/get-started/administrator/quickstart-administrator.qmd){.button .button-green}
 :::
 
 ::: {.w-33-ns .pl1 .pr1}
@@ -390,7 +393,7 @@ Model Development
 
 [Save time by automating documentation and testing for your models using our library.]{.mid-gray .f4}
 
-[**Developer Quickstart**](/get-started/developer/quickstart-developer.qmd){.button-green .cta}
+[**Developer Quickstart**](/get-started/developer/quickstart-developer.qmd){.button .button-green}
 :::
 
 ::: {.w-33-ns .pl2}
@@ -402,7 +405,7 @@ Model Validation
 
 [Quickly assess compliance by linking evidence from developers in your validation reports.]{.mid-gray .f4}
 
-[**Validator QuickStart**](/get-started/validator/quickstart-validator.qmd){.button-green .cta}
+[**Validator QuickStart**](/get-started/validator/quickstart-validator.qmd){.button .button-green}
 :::
 
 :::
@@ -439,7 +442,7 @@ ValidMind is a platform that helps identify AI and LLM risks while generating re
 :::
 
 ::: {.nt3}
-[**What is ValidMind?**](/training/fake-tour/product-tour.qmd){.button-white .cta}
+[**What is ValidMind?**](/training/fake-tour/product-tour.qmd){.button .button-white}
 :::
 
 :::
@@ -476,7 +479,7 @@ ValidMind [Academy]{.pink}
 [Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.]{.mid-gray}
 
 ::: {.nt3}
-[**Learn through doing**](/training/training.qmd){.button-white .cta}
+[**Learn through doing**](/training/training.qmd){.button .button-white}
 :::
 
 :::
