Add latest to listing pages

--- a/site/releases/validmind-library-releases.qmd
+++ b/site/releases/validmind-library-releases.qmd
@@ -1,6 +1,6 @@
 ---
 title: "{{< var validmind.developer >}} releases"
-subtitle: "`v2.8.26`"
+subtitle: "Latest: `v2.8.26`"
 date: "June 26, 2025"
 listing:
   contents: ../releases/validmind-library/**/pr-*.qmd
