added the DO NOT REMOVE COLUMNS back

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -372,7 +372,7 @@ main.content {
 
 ::: {.w-80-ns .flex .flex-wrap .justify-around}
 
-::: {.w-33-ns .pr2}
+::: {.home-section-card}
 ![](/assets/home-page/setup_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
 
 ::: {.f3 .b .nt3 .nb3}
@@ -384,7 +384,7 @@ Setup + Administration
 [**Setup QuickStart**](/get-started/administrator/quickstart-administrator.qmd){.button .button-green}
 :::
 
-::: {.w-33-ns .pl1 .pr1}
+::: {.home-section-card}
 ![](/assets/home-page/model_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
 
 ::: {.f3 .b .nt3 .nb3}
@@ -396,7 +396,7 @@ Model Development
 [**Developer Quickstart**](/get-started/developer/quickstart-developer.qmd){.button .button-green}
 :::
 
-::: {.w-33-ns .pl2}
+::: {.home-section-card}
 ![](/assets/home-page/model_valid_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
 
 ::: {.f3 .b .nt3 .nb3}
