Add initial thresholds and alerts content for discussion with Juan

--- a/site/guide/monitoring/ongoing-monitoring.qmd
+++ b/site/guide/monitoring/ongoing-monitoring.qmd
@@ -10,6 +10,7 @@ listing:
     fields: [title, description]
     contents:
       - enable-monitoring.qmd
+      - set-thresholds-and-alerts.qmd
       - review-monitoring-results.qmd
       - work-with-metrics-over-time.qmd
       - ../../notebooks/code_samples/ongoing_monitoring/quickstart_customer_churn_ongoing_monitoring.ipynb
