docs: Workflows Broadcast step (#813)
* Broadcast step WIP

* Broadcast step Edit

* Editing

* Setup for Broadcast example

* save point

* Examples

* Tweak

* Editing screenshot

* Proofreading

* Testing something

---------

Co-authored-by: Nik Richers <nik@validmind.ai>

--- a/site/guide/model-workflows/_conditional-requirements.qmd
+++ b/site/guide/model-workflows/_conditional-requirements.qmd
@@ -2,6 +2,8 @@
 Configure conditional requirements for the following step types:^[[Workflow step types](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)]
 
 ::: {.panel-tabset}
+### Transitions
+
 #### {{< fa cube >}} Model Stage Change
 
 [optional]{.smallcaps .pink}
@@ -11,6 +13,8 @@ Configure conditional requirements for the following step types:^[[Workflow step
 
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
+
+### Actions
 
 #### {{< fa arrow-pointer >}} User Action v2
 
@@ -28,6 +32,12 @@ Configure conditional requirements for the following step types:^[[Workflow step
 ] for your **[approval group]{.smallcaps}**.
 
 - Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved.
+
+#### {{< fa bullhorn >}} Broadcast
+
+Select from either **Model Stakeholder Types**^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User Roles**.^[[Manage roles](/guide/configuration/manage-roles.qmd)]
+
+### Conditional
 
 #### {{< fa maximize >}} Condition Branch
 
@@ -59,6 +69,8 @@ Configure conditional requirements for the following step types:
 - {{< fa arrow-pointer >}} User Action v2 **[optional]{.smallercaps}**
 
 - {{< fa users >}} Approval
+
+- {{< fa bullhorn >}} Broadcast
 
 - {{< fa maximize >}} Condition Branch
 
