--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -38,7 +38,7 @@ Creates a button that performs an action on behalf of the user.
 
 #### {{< fa users >}} Approval
 
-When your workflow reaches the approval step, roles or users in the selected **[approval group]{.smallcaps}** will receive a preconfigured message.
+Display a preconfigured message to users in the selected **[approval group]{.smallcaps}**.
 
 - Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
 - Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^step-types-2]
@@ -49,6 +49,19 @@ When your workflow reaches the approval step, roles or users in the selected **[
 | [threshold]{.smallcaps} | Percentage of approvers required for approval. |
 | Approval Message | When your workflow reaches this {{< fa users >}} Approval step, the selected [approval group]{.smallcaps}  will shown this message.^[Enter in a **[title]{.smallcaps}** and a **[message]{.smallcaps}** to display.] |
 : **{{< fa users >}} Approval** step configuration {.hover tbl-colwidths="[35,65]"}
+
+#### {{< fa bullhorn >}} Broadcast
+
+Send email notifications to users in selected groups.
+
+Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
+
+| Field | Description |
+|---:|---|
+| Select roles  | Select the **Model Stakeholder Types** or **User Roles** to receive the email. |
+| [subject]{.smallcaps} | Enter the subject of the email. |
+| [message]{.smallcaps} | Enter the body of the email.[^step-types-3] |
+: **{{< fa bullhorn >}} Broadcast** step configuration {.hover tbl-colwidths="[25,75]"}
 
 ### Conditional
 
@@ -118,6 +131,10 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
         a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.
         b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.
 
+[^step-types-3]: Use the rich text editor to compose your message:
+
+    1. Include optional details about the model the workflow is running on using the **{ } Insert Variable** drop-down.
+    2. Click on the **Preview** tab and choose a model under **[select model for preview]{.smallcaps}** to confirm how the notification will appear when rendered.
 ::::
 
 
@@ -138,7 +155,11 @@ Creates a button that performs an action on behalf of the user.
 
 #### {{< fa users >}} Approval
 
-When your workflow reaches the approval step, roles or users in the selected **[approval group]{.smallcaps}** will receive a preconfigured message.
+Display a preconfigured message users in the selected **[approval group]{.smallcaps}**.
+
+#### {{< fa bullhorn >}} Broadcast
+
+Send email notifications to users in selected groups.
 
 #### {{< fa maximize >}} Condition Branch
 
