--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -41,6 +41,7 @@ This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-
 This workflow is initiated when a field is populated — in this case, when the model is slated for deployment by entering value into the [deployment scheduled]{.smallcaps} date time field.[^8]
 
 - The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production.
+- After a model is deployed via this workflow, an email notification is sent to users notifying them of the completed implementation.
 - Actions on this workflow are linked both to a transition in model stage,[^9] as well as workflow state.[^10]
 
 ::: {.tc}
@@ -133,9 +134,30 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assign
 
 ![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" width=90% .screenshot group="approval"}
 
+#### {{< fa bullhorn >}} Broadcast
+
+In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email notification after a model is deployed:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+
+![Example {{< fa bullhorn >}} Broadcast configuration modal](configure_broadcast.png){fig-alt="A screenshot showing an example Broadcast configuration modal" .screenshot group="broadcast"}
+:::
+
+::: {.w-40-ns}
+
+![Example {{< fa bullhorn >}} Broadcast step](example_broadcast.png){fig-alt="A screenshot showing an example Broadcast step" .screenshot group="broadcast"}
+
+![Example {{< fa bullhorn >}} Broadcast notification preview](example_broadcast-notif.png){fig-alt="A screenshot showing an example Broadcast notification preview" .screenshot group="broadcast"}
+
+:::
+
+::::
+
 #### {{< fa maximize >}} Condition Branch
 
-In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^15] approval process:[^16]
+In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^16] approval process:[^17]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -154,7 +176,7 @@ In this example, models where the field [genai model]{.smallcaps} is set to true
 
 #### {{< fa clock >}} Wait
 
-In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} date time field:[^17]
+In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} date time field:[^18]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -249,6 +271,7 @@ In this example, the workflow is designated to stop after running an additional 
     - [{{< fa arrow-pointer >}} User Action v2](#user-action-v2)
     - [{{< fa cube >}} Model Stage Change](#model-stage-change)
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
+    - [{{< fa bullhorn >}} Broadcast](#broadcast)
     - [{{< fa clock >}} Wait](#wait)
     - [{{< fa circle-stop >}} End](#end)
 
@@ -264,8 +287,10 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^14]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^15]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^15]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^16]: [{{< fa users >}} Approval](#approval)
+[^16]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^17]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+[^17]: [{{< fa users >}} Approval](#approval)
+
+[^18]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
