Placeholder for manage model finding fields

--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -4,12 +4,13 @@ date: last-modified
 listing:
   - id: validation
     type: grid
-    grid-columns: 2
+    grid-columns: 3
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
     - manage-validation-guidelines.qmd
+    - manage-model-finding-fields.qmd
     - manage-finding-statuses.qmd
 ---
 
