--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -3,7 +3,7 @@ title: "Manage model finding fields"
 date: last-modified
 ---
 
-{{< include /guide/model-inventory/_model-inventory-fields.qmd >}}
+Create and edit the fields that appear on findings logged on your models. Choose from an array of field types with different properties and use cases.
 
 ::: {.attn}
 
@@ -14,7 +14,7 @@ date: last-modified
 
 :::
 
-## Add or edit inventory fields
+## Add or edit finding fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -24,11 +24,11 @@ date: last-modified
 
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
-#### Inventory field types
+#### Finding field types
 
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
-## Delete inventory fields
+## Delete finding fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -42,7 +42,7 @@ date: last-modified
 
 ## What's next
 
-- [Working with the model inventory](working-with-model-inventory.qmd)
+- [Working with model findings](working-with-model-findings.qmd)
 
 
 <!-- FOOTNOTES -->
