Manage model finding fields draft

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -28,6 +28,7 @@ aliases:
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
 #### Inventory field types
+<span id="field-types"></span>
 
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
