--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -18,21 +18,79 @@ Create and edit the fields that appear on findings logged on your models. Choose
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Models, select **Model Inventory Fields**.
+2. Under Findings, select **Finding Fields**.
 
-    Here you can edit existing inventory fields, or add a new one:
+    Here you can edit existing finding fields, or add a new one:
 
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
 #### Finding field types
+<span id="field-types"></span>
 
-{{< include /guide/model-inventory/_inventory-field-types.qmd >}}
+Single Line Text
+: Simple text value.
+
+Attachments
+: Upload supporting files for your model.^[[Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
+
+Long Text
+: Toggle **Enable rich text formatting** to create a template using the rich text editor.
+
+Single Select
+: Click **{{< fa plus >}} Add Option** to define a list of options.
+
+Multiple Select
+: Click **{{< fa plus >}} Add Option** to define a list of options. 
+
+Checkbox
+: A `true`/`false` value set by a toggle.
+
+Number
+: Text value in valid number format. Number display (comma, fullstop, etc.) is determined by your browser's locale. Select a **[number type]{.smallcaps}**:
+
+- **Simple** — Define the [decimal places]{.smallcaps} that the number should be displayed up to and any [large number abbreviation]{.smallcaps}s.
+- **Currency** — Define the [currency]{.smallcaps} you would like the field to display in, as well as the [decimal places]{.smallcaps} that the number should be displayed up to and any [large number abbreviation]{.smallcaps}s.
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+![Simple number field type](/guide/model-inventory/number-simple.png){fig-alt="A screenshot showing a simple number field type" .screenshot group="number"} 
+
+:::
+
+::: {.w-40-ns}
+![Currency number field type](/guide/model-inventory/number-currency.png){fig-alt="A screenshot showing a currency number field type" .screenshot group="number"}
+
+:::
+
+::::
+
+URL
+: Text value in valid URL format.
+
+Date
+: - Date value in `yyyy-mm-dd` format. 
+- Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
+- Set the [date format]{.smallcaps} for date fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
+
+Date Time
+: - Date value in `yyyy-mm-dd, 24hr` format.
+- Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
+- Set the [date format]{.smallcaps} for date time fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
+
+Email
+: Text value in valid email (`user@domain.com`) format.
+
+User
+: 
+- Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
+- Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
 ## Delete finding fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Models, select **Model Inventory Fields**.
+2. Under Findings, select **Finding Fields**.
 
 3. Hover over the field you would like to delete.
 
