--- a/site/guide/monitoring/ongoing-monitoring.qmd
+++ b/site/guide/monitoring/ongoing-monitoring.qmd
@@ -13,8 +13,17 @@ listing:
       - set-thresholds-and-alerts.qmd
       - review-monitoring-results.qmd
       - work-with-metrics-over-time.qmd
+  - id: ongoing-monitoring-code-samples
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
       - ../../notebooks/code_samples/ongoing_monitoring/quickstart_customer_churn_ongoing_monitoring.ipynb
-  - id: ongoing-monitoring
+      - ../../notebooks/code_samples/ongoing_monitoring/application_scorecard_ongoing_monitoring.ipynb
+      # - ../../notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb
+  - id: ongoing-monitoring-tests
     contents: "../../tests/ongoing_monitoring/*.md"
     type: grid
     grid-columns: 2
@@ -32,11 +41,6 @@ Monitoring is a critical component of model risk management, as emphasized in re
 - Continuous monitoring to sustain the model's integrity and mitigating risks associated with its use as they arise.
 
 
-::: {.column-margin}
-![Sample monitoring results](target-prediction-distribution-plot-zoomed.png){fig-alt="An image showing sample monitoring results in the ValidMind Platform" .screenshot}
-:::
-
-
 ## Monitoring scenarios
 
 Scenarios where ongoing monitoring is warranted:
@@ -52,6 +56,13 @@ Scenarios where ongoing monitoring is warranted:
 - **Post-production monitoring** — After deployment into production, models should be regularly tested against performance benchmarks to identify deviations, enabling timely recalibrations or adjustments. 
 
   The model's output should be assessed regularly against predefined performance benchmarks to ensure it meets the required standards. Any deviations from the expected performance should be quickly identified, allowing for timely intervention.
+
+::: {.column-margin}
+![Histogram of prediction probabilities to indicate model drift](prediction-probabilities-histogram-drift.png){fig-alt="A visualisation of prediction probabilities histogram drift for a binary classification model. It compares the distribution of predicted probabilities between two datasets: a reference dataset (baseline) and a monitoring dataset (current data)." .screenshot}
+
+![Comparing predicted probabilities between reference and monitoring datasets](distribution-of-reference-and-monitor-predictions.png){fig-alt="An image showing a distribution plot comparing predicted probabilities between a reference dataset and a monitoring dataset." .screenshot}
+:::
+
 
 ## Ongoing monitoring plan
 
@@ -121,14 +132,19 @@ Key test areas to pay attention to:
 To try out monitoring, check out the code sample for ongoing monitoring of models.[^3]
 :::
 
-#### {{< fa desktop >}} Available tests
-
-:::{#ongoing-monitoring}
-:::
-
-## What's next
+## What's' next
 
 :::{#ongoing-monitoring-listing}
+:::
+
+## Code samples
+
+:::{#ongoing-monitoring-code-samples}
+:::
+
+## {{< fa desktop >}} Available tests
+
+:::{#ongoing-monitoring-tests}
 :::
 
 <!-- FOOTNOTES -->
