Update alert notifications section and remove notes to self

--- a/site/guide/monitoring/set-thresholds-and-alerts.qmd
+++ b/site/guide/monitoring/set-thresholds-and-alerts.qmd
@@ -20,21 +20,6 @@ Once thresholds are defined, the {{< var validmind.platform >}} will highlight m
 
 Thresholds and notifications work together to improve visibility into model performance and compliance risk, helping you take timely action when needed.
 
-<!-- 
-Coming: Multilevel batches: Ability to set levels (red, yellow, green) that will replace badges.
-More emphasis on monitoring; alerts are very simple — sends alert if threshold is breached. Future: could be 3 consecutive breaches in a week. 
-
-TO DO:
-- Update guide with example from notebnook (log metrics over time notpeoobk)
-- Replace figure on ongoing mojitoring page in ongoing monitoring for scorecard notebook. (Juan to send images)
-- on landing page: add more notebooks and GitHub link
-- on review monitoring results
-
-2 notebooks for monitoring (custoemr churn, scorecard, — elvate svcorecard over customer chiurn) - notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb
-
-https://github.com/validmind/validmind-library/blob/main/notebooks/code_samples/ongoing_monitoring/application_scorecard_ongoing_monitoring.ipynb - for the scorecard use case
--->
-
 ## Define thresholds in `log_metric()`
 
 You can define thresholds by passing a dictionary to the `thresholds` parameter in `log_metric()`:
@@ -105,19 +90,13 @@ In the {{< var validmind.platform >}}, metrics flagged with `passed=False` show 
  
 ::::
 
-## Configure alert notifications (optional)
+## Alert notifications
 
-If a metric is logged which doesn't meet the `passed` requirement, an email is sent to model stakeholders, notifying them that the given model is past the given Ongoing Monitoring Test Threshold and requires attention. Stakeholders who receive this email notification include:
+If a metric is logged which doesn't meet the `passed` requirement, an email is sent to model stakeholders, notifying them that the given model is past the given ongoing monitoring test threshold and requires attention. 
 
-- Model owner
-- Model developer
-- Validator
+Stakeholders who receive this email notification include:
 
-You can set up notifications to alert your team when a metric breaches a threshold or fails an acceptance rule. To configure alerts:
+- Model owners
+- Model developers
+- Validators
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under TBD, select **TBD**.
-3. TBD
-4. TBD
-5. TBD
